[tool.poetry]
name = "joystick-midi"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "joystick_midi"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
mido = {version = "^1.3.2", extras = ["ports-rtmidi"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
